fix for program on mobile

--- a/app/assets/stylesheets/_program.css.scss
+++ b/app/assets/stylesheets/_program.css.scss
@@ -36,9 +36,11 @@
   }
   @media #{$mobile}{
     .grid-item{
-      position: initial !important;
+      position: relative !important;
       top: 0 !important;
       left: 0 !important;
+      margin-top: 0 !important;
+      margin-bottom: 0 !important:
     }
     .day{
       margin-top: 3rem;
